fixed zoomed in on mobile
In width < 600px font-size was too big for it to fit on the screen, so it got zoomed in.

--- a/style/footer.scss
+++ b/style/footer.scss
@@ -4,7 +4,7 @@ footer{
     flex-direction: column;
     gap: 1rem;
     text-align: center;
-    padding: 3rem;
+    padding: 2rem;
     color: white;
     background-color: rgb(48, 48, 48);
     width: 100%;
@@ -28,5 +28,9 @@ footer{
             }
         }
         
+    }
+
+    @media(max-width: 600px){
+        font-size: 14px;
     }
 }
